--- a/public/config.json
+++ b/public/config.json
@@ -30,7 +30,7 @@
     }
   },
   "metaData": {
-    "icon": "https://dry-lake-43299.herokuapp.com/icon.png",
+    "icon": "https://jb-activity-simple.herokuapp.com/icon.png",
     "category": "message",
     "iconSmall": null,
     "original_icon": "icon.png",
